sylvia/tests/ui/missing_methods.stderr
error: No instantiation message
 --> tests/ui/missing_methods.rs:9:5
  |
9 |     impl Contract {
  |     ^^^^

error: custom attribute panicked
  --> tests/ui/missing_methods.rs:21:5
   |
21 |     #[contract]
   |     ^^^^^^^^^^^
   |
   = help: message: Contract must have a `new` method
